--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,24 @@
 .App {
+  margin-left: 30px;
+}
+
+.square {
+  height: 75px;
+  width: 75px;
+  border: 1px solid black;
   text-align: center;
+  font-size: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
+.square:hover {
+  background-color: #EBE2E0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.currentPlayer {
+  margin-top: 10px;
+  font-size: 30px;
 }
